Minor bug fixes and styles

--- a/MetadataEditorCSS.html
+++ b/MetadataEditorCSS.html
@@ -1,11 +1,15 @@
 <style type="text/css">
+    .dwca-metadata {
+        overflow: hidden;
+    }
+
     .dwca-metadata .form-group label {
         margin-right: 10px;
     }
+
     #dwca-schema {
         width: 400px;
         height: 400px;
         margin: auto;
     }
-
 </style>
